// TODO: Remove this header!!!
enum MessageType {
    Invalid  = 0;

    RegisterUserReq = 1;
    RegisterUserRsp = 2;

    Plain    = 1000;
}


message MessageHeader {
    required MessageType type = 1 [default = Invalid];
    required uint32     length = 2; // Length of data (not header.)
    required string version = 3;
    required string session_id = 4; // Set it to empty for first client req.
    optional bool   result = 5;
}
